fully update News Fragment with the use of API provided by https://newsapi.org

--- a/mobileproject/app/src/main/res/values/strings.xml
+++ b/mobileproject/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="missions">missions</string>
     <string name="missions_nschedules_nsightings">Missions\nSchedules\nSightings</string>
     <string name="NASA">NASA</string>
+    <string name="newest_upload">Newest Upload</string>
 </resources>
