--- a/mobileproject/app/src/main/res/values/strings.xml
+++ b/mobileproject/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="missions_nschedules_nsightings">Missions\nSchedules\nSightings</string>
     <string name="NASA">NASA</string>
     <string name="newest_upload">Newest Upload</string>
+    <string name="astronomy_picture_of_the_day">Astronomy Picture of the day</string>
 </resources>
